# packages/openapi/spec/listmonk.yaml
@@ -1305,7 +1305,7 @@ paths:
                 type: object
                 properties:
                   data:
-                    $ref: "#/components/schemas/CampaignUpdate"
+                    $ref: "#/components/schemas/Campaign"
 
   "/campaigns/{id}":
     get:
@@ -1364,7 +1364,7 @@ paths:
                 type: object
                 properties:
                   data:
-                    $ref: "#/components/schemas/CampaignUpdate"
+                    $ref: "#/components/schemas/Campaign"
 
     delete:
       description: deletes specified campaign
@@ -3954,6 +3954,8 @@ components:
           type: integer
         clicks:
           type: integer
+        bounces:
+          type: integer
         lists:
           type: array
           items:
@@ -3965,6 +3967,8 @@ components:
                 type: string
         started_at:
           type: string
+          format: date-time
+          nullable: true
         to_send:
           type: integer
         sent:
@@ -3982,21 +3986,54 @@ components:
           type: string
         body:
           type: string
+        body_source:
+          type: string
+          nullable: true
+        altbody:
+          type: string
+          nullable: true
         send_at:
           type: string
+          format: date-time
+          nullable: true
         status:
           type: string
         content_type:
           type: string
-          enum: [richtext, html, markdown, plain]
+          enum: [richtext, html, markdown, plain, visual]
         tags:
           type: array
           items:
             type: string
         template_id:
           type: integer
+          nullable: true
         messenger:
           type: string
+        headers:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: string
+        attribs:
+          type: object
+          additionalProperties: true
+        archive:
+          type: boolean
+        archive_slug:
+          type: string
+          nullable: true
+        archive_template_id:
+          type: integer
+          nullable: true
+        archive_meta:
+          type: object
+          additionalProperties: true
+        media:
+          type: array
+          items:
+            $ref: "#/components/schemas/MediaFileObject"
 
     CampaignContentRequest:
       type: object
@@ -4024,6 +4061,8 @@ components:
                 type: string
         started_at:
           type: string
+          format: date-time
+          nullable: true
         to_send:
           type: integer
         sent:
@@ -4043,17 +4082,20 @@ components:
           type: string
         send_at:
           type: string
+          format: date-time
+          nullable: true
         status:
           type: string
         content_type:
           type: string
-          enum: [richtext, html, markdown, plain]
+          enum: [richtext, html, markdown, plain, visual]
         tags:
           type: array
           items:
             type: string
         template_id:
           type: integer
+          nullable: true
         messenger:
           type: string
         from:
@@ -4071,30 +4113,64 @@ components:
         lists:
           type: array
           items:
-            type: number
+            type: integer
         from_email:
           type: string
         content_type:
           type: string
+          enum: [richtext, html, markdown, plain, visual]
         messenger:
           type: string
         type:
           type: string
+          enum: [regular, optin]
         tags:
           type: array
           items:
             type: string
-        send_later:
-          type: boolean
         send_at:
+          type: string
+          format: date-time
+          nullable: true
+        headers:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: string
+        attribs:
           type: object
-          properties:
-            headers:
-              type: array
-              items:
-                type: object
-            template_id:
-              type: number
+          additionalProperties: true
+        template_id:
+          type: integer
+          nullable: true
+        body:
+          type: string
+        body_source:
+          type: string
+          nullable: true
+        altbody:
+          type: string
+          nullable: true
+        archive:
+          type: boolean
+        archive_slug:
+          type: string
+          nullable: true
+        archive_template_id:
+          type: integer
+          nullable: true
+        archive_meta:
+          type: object
+          additionalProperties: true
+        media:
+          type: array
+          items:
+            type: integer
+        subscribers:
+          type: array
+          items:
+            type: string
 
     CampaignUpdate:
       type: object
@@ -4267,11 +4343,26 @@ components:
 
     TransactionalMessage:
       type: object
+      required:
+        - template_id
       properties:
+        subscriber_mode:
+          type: string
+          enum: [default, fallback, external]
+        subscriber_emails:
+          type: array
+          items:
+            type: string
+        subscriber_ids:
+          type: array
+          items:
+            type: integer
         subscriber_email:
           type: string
+          deprecated: true
         subscriber_id:
           type: integer
+          deprecated: true
         template_id:
           type: integer
         from_email:
@@ -4282,9 +4373,13 @@ components:
           type: array
           items:
             type: object
+            additionalProperties:
+              type: string
         messenger:
           type: string
         content_type:
+          type: string
+        subject:
           type: string
         altbody:
           type: string
